--- a/index.html
+++ b/index.html
@@ -1,73 +1,56 @@
-<!doctype html>
+
+     <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Bootstrap Website</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <style>
-            :root {
-            --dark-blue: #264653;
-            --light-green: #2a9d8f;
-            --yellow: #e9c46a;
-            --orange: #f4a261;
-            --salmon: #e76f51;
-            }
-            .container {
-            color: var(--dark-blue);
-            font-size: 20px;
-            font-weight: bold;
-            min-height: 100vh;
-            background-color: var(--yellow);
-            }
+<head>
+<meta charset="UTF-8">
+<title>Bootstrap Grid Practice</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+.box {
+border: 2px solid purple;
+height: 60px;
+margin-bottom: 15px;
+background-color: #eee;
+}
+</style>
+</head>
+<body>
 
-            .row {
-            border: 1px solid var(--dark-blue);
-            min-height: 50px;
-            }
+<div class="container mt-5">
 
-            [class^="col-"] {
-            border: 1px solid var(--light-green);
-            min-height: 50px;
-            }
-        </style>
-    </head>
-    <body>
 
-        <div class="container">
+<div class="row">
+<div class="col-12 box"></div>
+</div>
 
-            <div class="row">
-                <div class="col-12 col-md-3"></div>
-                <div class="col-12 col-md-5"></div>
-                <div class="col-12 col-md-4"></div>
-            </div>
-            <div class="row">
-                <div class="col-6 col-md-5"></div>
-                <div class="col-6 col-md-4"></div>
-                <div class="col-6 col-md-3"></div>
-            </div>
-            <div class="row">
-                <div class="col-4 col-md-12"></div>
-                <div class="col-4 col-md-12"></div>
-                <div class="col-4 col-md-12"></div>
-            </div>
-            <div class="row">
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-                <div class="col-3 col-md-1"></div>
-            </div>
-            
-        </div>
+<div class="row">
+<div class="col-8 box"></div>
+<div class="col-4 box"></div>
+</div>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    </body>
+
+<div class="row">
+<div class="col-12 box"></div>
+</div>
+
+<div class="row">
+<div class="col-6 box"></div>
+<div class="col-6 box"></div>
+</div>
+
+<div class="row">
+<div class="col-4 box"></div>
+<div class="col-8 box"></div>
+</div>
+
+<div class="row">
+<div class="col-4 box"></div>
+<div class="col-4 box"></div>
+<div class="col-4 box"></div>
+</div>
+
+</div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </body>
 </html>
